--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
   "name": "hardhat-project",
   "devDependencies": {
-    "@nomicfoundation/hardhat-chai-matchers": "^2.0.8",
-    "@nomicfoundation/hardhat-ethers": "^3.0.8",
-    "@nomicfoundation/hardhat-ignition": "^0.15.10",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-ignition": "^0.15.0",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@nomicfoundation/hardhat-verify": "^2.0.13",
-    "@types/chai": "^5.2.1",
-    "@types/mocha": "^10.0.10",
-    "chai": "^5.2.0",
-    "ethers": "^6.13.5",
-    "hardhat": "^2.22.19",
+    "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@typechain/ethers-v5": "^11.1.2",
+    "@typechain/ethers-v6": "^0.5.0",
+    "@typechain/hardhat": "^9.1.0",
+    "@types/chai": "^4.2.0",
+    "@types/dotenv": "^8.2.3",
+    "@types/mocha": ">=9.1.0",
+    "@types/node": ">=18.0.0",
+    "chai": "^4.2.0",
+    "dotenv": "^16.4.7",
+    "ethers": "^5.9.7",
+    "hardhat": "^2.22.18",
+    "hardhat-gas-reporter": "^1.0.8",
+    "solidity-coverage": "^0.8.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
+    "typechain": "^8.3.0",
+    "typescript": "^5.7.3"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.3"
