Add Uniswap integration and update dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ node_modules
 # solidity-coverage files
 /coverage
 /coverage.json
-
+/ignition/deployments
+/ignition/.*
+/test/.*
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31337
